examples/test/testpolicy5252.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5252
  namespace: namespace13
spec:
  podSelector:
    matchLabels:
      key23: value42
      key14: value19
      key39: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value30
      podSelector:
        matchLabels:
          key49: value8
          key1: value38
          key45: value12
